# 1bitsy-rust

./: Cargo.toml  README  bitsy.gdb  memory.x
.cargo/: config.toml
old/: main.f
src/: main.rs
